WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237751
Unreviewed, non-unified build fix after
248294@main
https://bugs.webkit.org/show_bug.cgi?id=237751
Summary
Unreviewed, non-unified build fix after 248294@main
Lauro Moura
Reported
2022-03-10 18:14:19 PST
Unreviewed, non-unified build fix after
248294@main
Attachments
[fast-cq] Patch
(1.23 KB, patch)
2022-03-10 18:15 PST
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2022-03-10 18:15:25 PST
Created
attachment 454435
[details]
[fast-cq] Patch
Lauro Moura
Comment 2
2022-03-10 18:16:25 PST
/app/webkit/Source/WebCore/layout/integration/LayoutIntegrationLineLayout.cpp: In member function ‘void WebCore::LayoutIntegration::LineLayout::updateListItemDimensions(const WebCore::RenderListItem&)’: /app/webkit/Source/WebCore/layout/integration/LayoutIntegrationLineLayout.cpp:160:31: error: cannot convert ‘const WebCore::RenderListItem’ to ‘const WebCore::RenderBox&’ 160 | updateLayoutBoxDimensions(listItem); | ^~~~~~~~ | | | const WebCore::RenderListItem In file included from /app/webkit/Source/WebCore/layout/integration/LayoutIntegrationLineLayout.cpp:27: /app/webkit/Source/WebCore/layout/integration/LayoutIntegrationLineLayout.h:135:36: note: initializing argument 1 of ‘void WebCore::LayoutIntegration::LineLayout::updateLayoutBoxDimensions(const WebCore ::RenderBox&)’ 135 | void updateLayoutBoxDimensions(const RenderBox&); | ^~~~~~~~~~~~~~~~
alan
Comment 3
2022-03-10 18:50:37 PST
Sorry about that (and thank you for fixing it).
EWS
Comment 4
2022-03-10 19:23:14 PST
Committed
r291143
(
248303@main
): <
https://commits.webkit.org/248303@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454435
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-03-10 19:24:15 PST
<
rdar://problem/90138290
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug